# binance-ohlcv-collector

./: .gitignore  LICENSE  README.md  pyproject.toml
src/binance_ohlcv_collector/: __init__.py  cli.py  config.py  downloader.py  exceptions.py  processor.py  symbols.py  validation.py
tests/: test_cli.py  test_config.py  test_downloader.py  test_exceptions.py  test_integration.py  test_processor.py  test_symbols.py  test_validation.py
